styling to ensure links are visible

--- a/src/App.css
+++ b/src/App.css
@@ -56,5 +56,8 @@ li {
 
 a {
   text-decoration: none;
+}
+
+a.button {
   color: #fff;
 }
